--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greeting App</title>
+    <title>Time Assignment</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome! Click the button to continue...</h1>
-    <button class="btn" onclick="greetUserBasedOnTimeAndGender()">Greet Me</button>
+    <button class="btn" onclick="greetUserBasedOnTimeAndGender()">Click Here</button>
 
     <script src="script.js"></script>
 </body>
